# sqlite-d1-sync

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/d1_sync/: __init__.py  __main__.py  cli.py  config.py
src/d1_sync/connectors/: __init__.py  d1_client.py  sqlite.py
src/d1_sync/core/: __init__.py  chunker.py  engine.py  integrity.py  slug_sync.py  state.py
src/d1_sync/utils/: __init__.py  display.py  logger.py
tests/: __init__.py  test_config.py  test_sqlite.py
