[project]
name = "sqlite-d1-sync"
version = "1.0.0"
description = "Production-ready bidirectional sync between SQLite and Cloudflare D1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Parish Khan", email = "parish@example.com" }]
keywords = ["cloudflare", "d1", "sqlite", "sync", "database", "migration", "edge-computing", "python"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typer[all]>=0.12.0",      # CLI framework with rich integration
    "httpx>=0.27.0",           # Modern async HTTP client
    "pydantic>=2.6.0",         # Config validation and settings
    "pydantic-settings>=2.2.0", # Environment variable loading
    "rich>=13.7.0",            # Beautiful terminal UI
    "tomli>=2.0.1",            # TOML config parsing (stdlib in 3.11+)
    "aiosqlite>=0.20.0",       # Async SQLite support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "respx>=0.21.0",           # Mock httpx requests
]

[project.scripts]
d1-sync = "d1_sync.cli:app"

[project.urls]
"Homepage" = "https://github.com/parishkhan/sqlite-d1-sync"
"Bug Tracker" = "https://github.com/parishkhan/sqlite-d1-sync/issues"
"Documentation" = "https://github.com/parishkhan/sqlite-d1-sync#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d1_sync"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["d1_sync"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/d1_sync"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
